# fields_of_gold

./: CMakeLists.txt
src/: GradientDescent.cpp  GradientDescent.h  utils.h
src/Factory/: FunctionFactory.cpp  FunctionFactory.h
src/Functions/AbstractFunction/: AbstractFunction.cpp  AbstractFunction.h
src/Functions/CompositionFunction/: CompositionFunction.cpp  CompositionFunction.h
src/Functions/ConstantFunction/: ConstantFunction.cpp  ConstantFunction.h
src/Functions/ExponentialFunction/: ExponentialFunction.cpp  ExponentialFunction.h
src/Functions/IdenticalFunction/: IdenticalFunction.cpp  IdenticalFunction.h
src/Functions/Operators/: operators.cpp  operators.h
src/Functions/PolynomialFunction/: PolynomialFunction.cpp  PolynomialFunction.h
src/Functions/PowerFunction/: PowerFunction.cpp  PowerFunction.h
test/: Functions_test.cpp  GradientDescent_test.cpp  Operators_test.cpp
